available and guess letter bucket view

--- a/views/index.erb
+++ b/views/index.erb
@@ -26,14 +26,15 @@
 	<dl id="available_control">
 	  <dt>Available</dt>
 	  <dd>
-	      <ul id="available" class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	      <ul id="available" class="letters">
+	      </ul>
 	    <img src="images/shuffle-on.png" class="shuffle" alt="shuffle" />
 	  </dd>
 	</dl>
 	<dl id="guess_control">
 	  <dt>Guess</dt>
 	  <dd>
-	    <ul id="guess" class="letters"> <li>w</li><li>o</li><li>r</li><li>d</li><li>l</li><li>a</li> </ul>
+	    <ul id="guess" class="letters"> </ul>
 	    <img src="images/submit-off.png" class="submit" alt="submit" />
 	  </dd>
 	</dl>
