Backbone rewrite - Letter model, view framework

--- a/views/index.erb
+++ b/views/index.erb
@@ -7,8 +7,9 @@
     <script type="text/javascript" src="scripts/jquery2.js"></script>
     <script type="text/javascript" src="scripts/underscore.js"></script>
     <script type="text/javascript" src="scripts/json2.js"></script>
-    <script type="text/javascript" src="scripts/backbone.js"></script>
-    <script type="text/javascript" src="scripts/wordplay.js"></script>
+    <script type="text/javascript" src="scripts/backbone.js"></script>    
+    <script type="text/javascript" src="scripts/backbone-localstorage.js"></script>
+    <script type="text/javascript" src="scripts/wordplay_backbone.js"></script>
     <title>Wordplay</title>
 </head>
   <body>
@@ -57,6 +58,8 @@
 	  </button>
       </div>
     </div>      
+
+    
     <script id="timer-template" type="text/template">
       <dt>Timer</dt>
       <dd>
