game loads when start button is pressed, not on page reload

--- a/views/index.html
+++ b/views/index.html
@@ -85,7 +85,7 @@
       <img src="images/panda_{{= status }}.png" id="messanger"  alt="{{= threat }}" />
     </script>
     <script id="status-template" type="text/template">
-      {{= button_text }}
+      <%= button_text %>
     </script>
     <script id="score-template" type="text/template">
       <dt>
